added timestamps to usernames and made them serializable